# simple-inference

./: .env.example  .gitignore  config.py  env_loader.py  generate.py  loader.py  plan.md  program.md  pyproject.toml  requirements.txt  sampling.py  tokenizer.py  utilities.py
benchmarks/: bench_attention.py  bench_attention_kv.py  bench_block.py  bench_embedding.py  bench_engine_cudagraph.py  bench_llama.py  bench_mlp.py  bench_rmsnorm.py  bench_rope.py  bench_sampling.py  bench_utils.py  profile_kernel.py  results_baseline.json  run_baseline.py
benchmarks/benchmark_kernel/: bench_attention_compare.py  bench_rmsnorm.py  bench_rmsnorm_compare.py  bench_rope_compare.py  bench_swiglu_compare.py
iterations/: 01_naive_engine.py  02_kv_cache.py  03_engine.py  results.json  test_sequences.json
kernels/: __init__.py  attention_kernel.py  rmsnorm_kernel.py  rope_kernel.py  swiglu_kernel.py
model/: block.py  cuda_graph.py  kv_cache.py  llama.py
ops/: attention.py  embedding.py  mlp.py  rmsnorm.py  rope.py
profiling/: .gitignore  01_basic.py  02_schedule_tensorboard.py  03_chrome_trace_memory.py  04_nsys.py  README.md  __init__.py  profile_attention_nsys.py  profile_attention_torch.py  profile_attention_trace.py  profile_utils.py  roofline_attention.py  run_ncu.sh  run_nsys.sh
profiling/cudagraphs-test/: cuda_graph_op.py  eager_op.py  workload.py
profiling/profile-engine/: README.md  prompt.json
profiling/profile-kernels/: README.md  profile_utils.py  roofline_attention.py
serving/: engine.py  request.py  scheduler.py  server.py  test_engine.py
(+7 files in other folders)
