[project]
name = "simple-inference"
version = "0.1.0"
description = "Simple Inference Engine from scratch"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
    "transformers>=4.45.0",
    "safetensors>=0.4.0",
    "huggingface_hub>=0.24.0",
    "numpy>=1.26.0",
    "accelerate>=0.26.0",
]
