[project]
name = "simple-inference"
version = "0.1.0"
description = "Simple Inference Engine from scratch"
requires-python = ">=3.10"
dependencies = [
    "torch==2.6.0",
    "triton>=3.0.0",
    "transformers>=4.45.0",
    "safetensors>=0.4.0",
    "huggingface_hub>=0.24.0",
    "numpy>=1.26.0",
    "accelerate>=0.26.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[dependency-groups]
dev = [
    "tensorboard>=2.20.0",
    "torch-tb-profiler>=0.4.3",
]

# Pin PyTorch to a CUDA 12.4 build. The host driver (550.127.05) only supports
# CUDA <= 12.4, so the default PyPI wheel (cu13x) fails to initialize CUDA.
# cu124 is the newest CUDA build compatible with this driver.
[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
